[tool.poetry]
name = "modmapper"
version = "0.1.0"
description = "Dependency graphs for Steam workshop mods"
authors = ["Paul <dev@studiop.page>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
beartype = "^0.9.1"
Scrapy = "^2.5.1"
networkx = "^2.6.3"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.1"
pytest = "^6.2.5"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
